# ZoteroObsidianImporter

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  rust.yml
importer/: Cargo.toml
importer/src/: main.rs  panic.rs
importer/src/api/: mod.rs
importer/src/api/import/: file.rs  mod.rs  source.rs
importer/src/api/select/input/: index.rs
importer/src/api/shared/: mod.rs
importer/src/command/: mod.rs
importer/src/command/import/: core.rs  mod.rs
importer/src/command/import/format/: annotation.rs  mod.rs  source.rs  target.rs
importer/src/command/import/scan/: mod.rs  notes.rs  persistent.rs
importer/src/command/select/: core.rs
importer/src/core/: library_cache.rs
importer/src/global/: config.rs  context.rs  mod.rs
importer/src/util/: human_date.rs  iter.rs  mod.rs  path.rs  string.rs  versioned.rs
log/: Cargo.toml
log/src/: lib.rs  prelude.rs
plugin/: .gitattributes  .gitignore  pack.ts  package-lock.json  package.json  register-hooks.mjs  tsconfig.json  webpack.config.mts  webpack.config.ts
plugin/configs/base/: tsconfig.json
plugin/src/: core.ts  entry.ts  expand.ts  export.ts  manifest.json  tsconfig.json  util.ts
plugin/src/api/: index.ts  selection.ts
plugin/src/api/export/: annotations.ts  export.ts  (+1 more)
plugin/src/index/: index.ts
shim/ipc/: Cargo.toml
shim/ipc/src/: lib.rs
shim/proxy/: Cargo.toml
shim/proxy/src/: main.rs
shim/runner/: Cargo.toml
shim/runner/src/: main.rs
src/: config.rs  global.rs  main.rs  panic.rs
src/api/: mod.rs
src/api/import/: annotation.rs  file.rs  source.rs
src/api/shared/: author.rs
src/command/import/: core.rs  mod.rs
src/command/select/: core.rs  mod.rs
src/core/: mod.rs
src/document/: annotation.rs  doc.rs  mod.rs  util.rs
src/format/: annotation.rs  mod.rs  source.rs
src/global/: init.rs
src/import/: annotations.rs  mod.rs  source.rs
src/log/: mod.rs
src/scan/: notes.rs  persistent.rs
src/util/: directory.rs  mod.rs  text.rs
(+5 files in other folders)
