[package]
name = "ZOImporter"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
console = "0.15.11"
dialoguer = "0.11.0"

# PDF Processing
lopdf = { version = "0.36.0" }

# Time
chrono = "0.4.40"

# Byte Manipulation
bytemuck = "1.22.0"
zerocopy = { version = "0.8.25", features = ["alloc"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"]}
serde_path_to_error = "0.1.17"
serde_json = "1.0.140"
serde_yml = "0.0.12"

# Utils
itertools = "0.14.0"