[workspace]
resolver = "3"
members = ["importer", "log", "shim/proxy", "shim/runner"]

[workspace.package]
authors = ["Josh Nave"]
repository = "https://github.com/Josh194/ZoteroObsidianImporter"
rust-version = "1.85.0"
edition = "2024"

[workspace.dependencies]
# CLI
clap = { version = "4.5.37", features = ["derive"] }
console = { version = "0.15.11" }

# IPC
interprocess = { version = "2.2.3" }